--- a/NiceChatServer/NiceChatServer.vcxproj.filters
+++ b/NiceChatServer/NiceChatServer.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\NiceChatServer\NiceChatServer\Server.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="NiceChatServer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\NiceChatServer\NiceChatServer\Server.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
