--- a/NiceChatServer/NiceChatServer.vcxproj.filters
+++ b/NiceChatServer/NiceChatServer.vcxproj.filters
@@ -27,15 +27,21 @@
     <ClInclude Include="..\..\NiceChatServer\NiceChatServer\Server.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Client.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="NiceChatServer.cpp">
+    <ClCompile Include="..\..\NiceChatServer\NiceChatServer\Server.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\NiceChatServer\NiceChatServer\Server.cpp">
+    <ClCompile Include="Client.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
