--- a/NiceChatServer/NiceChatServer.vcxproj
+++ b/NiceChatServer/NiceChatServer.vcxproj
@@ -146,12 +146,14 @@
   <ItemGroup>
     <ClInclude Include="..\..\NiceChatServer\NiceChatServer\Server.h" />
     <ClInclude Include="Client.h" />
+    <ClInclude Include="ClientNotFoundException.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\NiceChatServer\NiceChatServer\Server.cpp" />
     <ClCompile Include="Client.cpp" />
+    <ClCompile Include="ClientNotFoundException.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
